# research-mcp

./: .dockerignore  .env.example  .gitignore  CRAWL_4AI_PATTERNS.md  Dockerfile  README.md  README_TAILSCALE.md  docker-compose.yml  docs_config.yaml  pyproject.toml
docs/: DEPLOYMENT.md
profiling/: profile_scrape.py  profile_search.py
searxng/: settings.yml
src/: celery_app.py  mcp_sse.py  settings.py
src/core/: config.py  constants.py
src/db/: database.py  models.py
src/models/: unified.py
src/scrapers/: __init__.py  base.py
src/services/: __init__.py  cache_service.py  content_cleaner.py  crawl_service.py  extraction_schemas.py  rate_limit_service.py  scrape_service.py  search_service.py  vision_service.py
src/tasks/: base.py  periodic_tasks.py  scrape_tasks.py
src/tools/: __init__.py  admin_tools.py  crawl_tools.py  docs_tools.py  proxy_tools.py  vision_tools.py  web_tools.py
src/utils/: __init__.py  http_client.py  proxy.py  rate_limiter.py  redis_mixin.py  singleton.py  url_utils.py
tests/e2e/: cache_e2e_test.py  mcp_client.py  test_mcp_server.py  test_research.py
tests/integration/: conftest.py  test_admin.py  test_blacklist.py  test_docs.py  test_health.py  test_proxy.py  test_scrape.py  test_search.py  test_vpn.py
tests/unit/: conftest.py  test_content_cleaner.py  test_rate_limit.py  test_scrapers.py  test_search_service.py  test_utils.py
